# VidEngram

./: .env.template  .gitignore  E2E_SETUP.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  serve_all.sh
backend/: graph_builder.py  server.py
config/: default_config.yaml
demo/: cli.py  gradio_app.py
docs/: REVIEW_FINDINGS.md  UTILITY.md  index.html
examples/: vllm_omni_video_memory.py
frontend/: index.html
scripts/: evaluate.py  start_services.sh
tests/: conftest.py  test_runtime_validation.py  test_videngram.py
videngram/: __init__.py  agent.py  captioner.py  config.py  consolidator.py  memory_reader.py  memory_writer.py  pipeline.py  segmenter.py  transcriber.py  utils.py  visualizer.py
