[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videngram"
version = "0.1.0"
description = "Hippocampal video memory: Qwen2.5-Omni + EverMemOS with agentic retrieval"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "VidEngram Team" }]
keywords = ["video-understanding", "memory", "llm", "multimodal", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.14.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "httpx>=0.24.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
demo = ["gradio>=4.0.0"]
dev = ["pytest>=7.0", "pytest-mock", "ruff"]

[project.scripts]
videngram-ingest = "demo.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
